k8s/03-core-services.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: svc-auth
  namespace: utf
spec:
  replicas: 2
  selector:
    matchLabels:
      app: svc-auth
  template:
    metadata:
      labels:
        app: svc-auth
    spec:
      containers:
        - name: svc-auth
          image: jsalass045/svc-auth:v1.0.0
          ports:
            - containerPort: 4000
---
apiVersion: v1
kind: Service
metadata:
  name: svc-auth
  namespace: utf
spec:
  selector:
    app: svc-auth
  ports:
    - port: 4000
      targetPort: 4000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: svc-inscripcion
  namespace: utf
spec:
  replicas: 2
  selector:
    matchLabels:
      app: svc-inscripcion
  template:
    metadata:
      labels:
        app: svc-inscripcion
    spec:
      containers:
        - name: svc-inscripcion
          image: jsalass045/svc-inscripcion:v1.0.0
          ports:
            - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: svc-inscripcion
  namespace: utf
spec:
  selector:
    app: svc-inscripcion
  ports:
    - port: 5000
      targetPort: 5000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: svc-pago
  namespace: utf
spec:
  replicas: 1
  selector:
    matchLabels:
      app: svc-pago
  template:
    metadata:
      labels:
        app: svc-pago
    spec:
      containers:
        - name: svc-pago
          image: jsalass045/svc-pago:v1.0.0
          ports:
            - containerPort: 7000
---
apiVersion: v1
kind: Service
metadata:
  name: svc-pago
  namespace: utf
spec:
  selector:
    app: svc-pago
  ports:
    - port: 7000
      targetPort: 7000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway
  namespace: utf
spec:
  replicas: 2
  selector:
    matchLabels:
      app: api-gateway
  template:
    metadata:
      labels:
        app: api-gateway
    spec:
      containers:
        - name: api-gateway
          image: jsalass045/api-gateway:v1.0.0
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: utf
spec:
  selector:
    app: api-gateway
  ports:
    - port: 3000
      targetPort: 3000
