k8s/front.yaml
# k8s/front.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: front
  namespace: sgal
spec:
  replicas: 1
  selector:
    matchLabels:
      app: front
  template:
    metadata:
      labels:
        app: front
    spec:
      containers:
        - name: front
          image: front:dev
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: front
  namespace: sgal
spec:
  type: NodePort
  selector:
    app: front
  ports:
    - port: 80
      targetPort: 80
      nodePort: 31000
