k8s/inscripcion.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: inscripcion
  namespace: sgal
spec:
  replicas: 2
  selector:
    matchLabels:
      app: inscripcion
  template:
    metadata:
      labels:
        app: inscripcion
    spec:
      containers:
        - name: inscripcion
          image: inscripcion:1.0
          ports:
            - containerPort: 5000
          resources:
            requests:
              cpu: "150m"
              memory: "256Mi"
            limits:
              cpu: "700m"
              memory: "512Mi"
          readinessProbe:
            httpGet:
              path: /ready
              port: 5000
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /healthz
              port: 5000
            initialDelaySeconds: 20
            periodSeconds: 20

---
apiVersion: v1
kind: Service
metadata:
  name: inscripcion
  namespace: sgal
spec:
  selector:
    app: inscripcion
  ports:
    - port: 5000
      targetPort: 5000
