k8s/pgbouncer.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pgbouncer
  namespace: sgal
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pgbouncer
  template:
    metadata:
      labels:
        app: pgbouncer
    spec:
      containers:
        - name: pgbouncer
          image: edoburu/pgbouncer
          ports:
            - containerPort: 6432
          volumeMounts:
            - name: config
              mountPath: /etc/pgbouncer/pgbouncer.ini
              subPath: pgbouncer.ini
            - name: config
              mountPath: /etc/pgbouncer/userlist.txt
              subPath: userlist.txt
          resources:
            requests:
              cpu: "50m"
              memory: "64Mi"
            limits:
              cpu: "300m"
              memory: "256Mi"
      volumes:
        - name: config
          configMap:
            name: pgbouncer-config

---
apiVersion: v1
kind: Service
metadata:
  name: pgbouncer
  namespace: sgal
spec:
  selector:
    app: pgbouncer
  ports:
    - port: 6432
      targetPort: 6432
