k8s/ingress-gateway.yaml
# k8s/ingress-gateway.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: utf-gateway-ingress
  namespace: sgal
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "2m"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "60"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "60"
    
spec:
  ingressClassName: nginx
  rules:
    # API Gateway (flujo que usas en las pruebas)
    - host: api.utf.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api-gateway
                port:
                  number: 3000

    # Front web opcional (para navegar mientras tanto)
    - host: front.utf.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: front
                port:
                  number: 80
